static/ajax-solr/css/semflow.css
* {
  padding: 0;
  margin: 0;
} 

body {
  background: #fff url(../images/header.gif) repeat-x;
  color: #333;
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-size: 12px;
  line-height: 18px;
}

.tab {
   border-top: 1px solid #aaa; 
   border-left: 1px solid #aaa; 
   border-right: 1px solid #aaa; 
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 5px;
   padding-bottom: 3px;
   float:bottom;
}
.chosen {
background: #fff;
}

.saved {
   border-top: 1px solid black; 
   border-left: 1px solid black; 
   border-right: 1px solid black;      
}

.tab a {
   color:#B4241B;
   font-weight:100;
   font-size: 15px;    
}
img {
  border: none;
}
a {
  color: #6998f0;
  text-decoration: none;
}

a.save {
    color: #333;
    border: 1px solid;
    padding-left: 5px;
    padding-right: 5px;
    background: #FAF8CC;
    border-radius: 10px;
}
a:hover {
  color: #000;
  text-decoration: underline;
}

#wrap {
  width: 1000px;
  margin: 0px auto;
}
.clear {
  clear: both;
}

/* header */

#header {
  height: 90px;
}

/*#header td.titletd {
    border: 1px solid;
}*/
#header h1 {
  padding: 20px 0 5px 15px;
  font-size: 18px;
}
#header h1.title {
  padding: 5px 10px 5px 5px;
  font-size: 30px;
  letter-spacing: -2px;
}

a.go {
    /*color: #333;*/
    font-size: 16px;
    border: 1px solid;
    padding-left: 5px;
    padding-right: 5px;
    /*background: #FAF8CC;*/
    border-radius: 10px;
}
#header h3 {
  padding-left: 10px;
  color: #666;
  font-size: 14px;
  font-weight: 100;
}

/* right */

.right {
  float: right;
  width: 538px;
  padding: 10px 20px 10px 40px;
  /*border-left: 1px solid #aaa;*/
  text-align: justify;
  
}
.right h2 {
  padding: 15px 0 5px 0;
  color: #B4241B;
  font-size: 15px;
  font-weight: 100;
  /*letter-spacing: -2px;*/
}

.full h1  {
  padding: 2px 0 2px 0;
  color: #B4241B;
  font-size: 20px;
  font-weight: 100;
  text-align: left;
  /*letter-spacing: -2px;*/
}

.full h2  {
  padding: 15px 0 15px 0;
  color: #B4241B;
  font-size: 15px;
  font-weight: 100;
  /*letter-spacing: -2px;*/
}

#result a {
  margin-right: 5px;
}
#navigation {
  border-bottom: 1px solid #000;
}
#pager,
#pager-header {
  display: inline;
}
#pager li,
.links li {
  list-style-type: none;
  display: inline;
}
#selection {
  padding: 10px 15px 0;
}
#selection li {
  list-style-type: none;
}
#docs {
  padding-top: 1px;
}

.full {
  float: center; 
  padding: 20px 20px 20px 20px;
}

.searchbox {
  text-align: center;
  float: center;
  padding: 20px 20px 20px 20px;
  border: 1px solid #aaa;
}
/* left */

.left {
  float: left;
  width: 390px;
  padding: 0 0 10px 10px;
  border-right: 1px solid #aaa;
  border-left: 1px solid #aaa;
}
.left h1 {
  clear: left;
  /*padding-top: 20px;*/
  color: #B4241B;
  font-size: 15px;
  border-bottom: 1px solid #aaa;
}
.left h2 {
  clear: left;
  padding-top: 20px;
/*  border-top: 1px solid #aaa;*/
  color: #333;
  font-size: 13px;
}
#search input {
  width: 250px;
}
#calendar {
  width: 160px;
}
#search_help {
  font-size: 80%;
}

#searchbig input {
    width: 350px;
    font-size: 18px;
    border: 1px solid #aaa;
}

#search_help_big {
    font-size: 15px;
}
.tagcloud {
  padding: 10px 15px 0;
}
.tagcloud_item {
  float: left;
  display: block;
  margin-right: 4px;
  color: #6998f0;
}
.tagcloud_item:hover {
  color: #f00;
}

/* tagcloud */

.tagcloud_size_0 {
font-size: 90%;
}
.tagcloud_size_1 {
font-size: 95%;
}
.tagcloud_size_2 {
font-size: 100%;
}
.tagcloud_size_3 {
font-size: 105%;
}
.tagcloud_size_4 {
font-size: 110%;
}
.tagcloud_size_5 {
font-size: 115%;
}
.tagcloud_size_6 {
font-size: 120%;
}
.tagcloud_size_7 {
font-size: 125%
}
.tagcloud_size_8 {
font-size: 135%;
}
.tagcloud_size_9 {
font-size: 140%;
}
.tagcloud_size_10 {
font-size: 145%;
}

/* How should the mission data be styled? */

div.missiondataarea {
    padding-left: 2em;
    text-align: left; /* override parent justify setting */
}

span.missionname {
    position: relative;
    left: -1em;
}

